messages for flash (locales) & refactoring events_controller

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -70,3 +70,9 @@ ru:
         address: "Адрес"
         datetime: "Дата проведения"
         description: "Описание события"
+      controllers:
+        events:
+          created: "Событие сохранено"
+          updated: "Данные обновлены"
+          destroyed: "Событие удалено"
+
