fixup _form eventsadded messages in locales

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -70,9 +70,8 @@ ru:
         address: "Адрес"
         datetime: "Дата проведения"
         description: "Описание события"
-      controllers:
-        events:
-          created: "Событие сохранено"
-          updated: "Данные обновлены"
-          destroyed: "Событие удалено"
-
+  controllers:
+    events:
+      created: "Событие сохранено"
+      updated: "Данные события обновлены"
+      destroyed: "Событие удалено"
