refactoring users_controller, added messages in locales

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -75,3 +75,5 @@ ru:
       created: "Событие сохранено"
       updated: "Данные события обновлены"
       destroyed: "Событие удалено"
+    users:
+      updated: "Данные пользователя обновлены"
