--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -77,3 +77,6 @@ ru:
       destroyed: "Событие удалено"
     users:
       updated: "Данные пользователя обновлены"
+  app:
+    name: "Шашлыки"
+    company: "Хороший программист"
