event-mailer, local_env, sendgrid

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -130,3 +130,21 @@ ru:
   subscriptions:
     subscription:
       destroy_confirm: 'Вы уверены, что хотите удалить эту подписку?'
+
+  event_mailer:
+    subscription:
+      subject: "Новая подписка на %{event_title}"
+      title: "Новая подписка"
+      name: "Имя"
+      email: "Email"
+      author: "Автор"
+      event: "Событие"
+      datetime: "Состоится"
+      owner: "Организатор"
+    comment:
+      subject: "Новый комментарий @%{event_title}"
+      title: "Новый комментарий"
+      author: "Автор"
+      event: "Событие"
+      datetime: "Состоится"
+      owner: "Организатор"
