--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -148,3 +148,12 @@ ru:
       event: "Событие"
       datetime: "Состоится"
       owner: "Организатор"
+    photo:
+      subject: "Новая фотография %{event_photo}"
+      title: "Новая фотография"
+      name: "Имя"
+      email: "Email"
+      author: "Автор"
+      event: "Событие"
+      datetime: "Состоится"
+      owner: "Организатор"
