default_i18n_subject, locales, comment

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -80,7 +80,8 @@ ru:
         user_name: "Никнейм"
         user_email: "E-mail"
       photo:
-        photo: "Фотография"
+        photo: "Фото"
+        user: "Пользователь"
 
     models:
       user: "Пользователь"
