--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -26,6 +26,7 @@ ru:
     omniauth_callbacks:
       failure: "Не удалось аутентифицировать вас от %{kind} потому что \"%{reason}\"."
       success: "Успешно аутентифицирован от %{kind} аккаунта."
+      error: "Ошибка аутентификации."
     passwords:
       no_token: "Вы не можете получить доступ к этой странице, не перейдя по электронной почте для сброса пароля. Если вы пришли из электронного письма для сброса пароля, убедитесь, что вы использовали полный URL-адрес."
       send_instructions: "Вы получите электронное письмо с инструкциями по изменению пароля через несколько минут."
