add delete instruction

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -115,13 +115,16 @@ ru:
       created: "Ваш комментарий добавлен"
       error: "Ошибка с комментарием"
     subscriptions:
-      created: 'Вы подписаны на это событие'
-      destroyed: 'Участник отписан'
-      error: 'Подписка/отписка не сработала'
+      created: "Вы подписаны на это событие"
+      destroyed: "Участник отписан"
+      error: "Подписка/отписка не сработала"
     photos:
-      error: 'Что-то не так с фоткой'
-      created: 'Вы добавили фотографию к событию'
-      destroyed: 'Вы удалили фотку'
+      error: "Что-то не так с фоткой"
+      created: "Вы добавили фотографию к событию"
+      destroyed: "Вы удалили фотку"
+    info_pages:
+      privacy_policy: "Политика конфиденциальности"
+      delete_instruction: "Инструкция по удалению учетной записи и данных Пользователя с сайта"
 
   app:
     name: "Шашлыки"
